gitops/apps/frontend/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workloads
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
